[package]
name = "truegear_audio_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio-tungstenite = { version = "0.26.1", features = ["connect"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "signal", "time"] }
futures-util = "0.3"
once_cell = "1"
base64 = "0"
cpal = { version = "0.15.3" }
hound = "2"
rustfft = "6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"